--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,40 @@
+sudo: required
 language: rust
+
+# Cache cargo symbols for faster build
+cache: cargo
+
+# Dependencies of kcov, used by coverage
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - binutils-dev
+      - cmake # also required for cargo-update
+    sources:
+      - kalakris-cmake
 
 rust:
   - stable
-  - beta
   - nightly
 
-matrix:
-  allow_failures:
-    - rust: beta
-  fast_finish: true
-  
+before_script:
+  - export PATH=$HOME/.cargo/bin:$PATH
+  - rustup component add rustfmt-preview
+  - rustup component add clippy-preview
+  - cargo install cargo-update || echo "cargo-update already installed"
+  - cargo install cargo-travis || echo "cargo-travis already installed"
+  - cargo install-update -a # update outdated cached binaries  
+script:
+  - cargo test
+  - cargo fmt -- --check
+  - cargo clippy -- -D warnings
+
+after_success:
+# measure code coverage and upload to coveralls.io
+  - cargo coveralls  
+
 notifications:
     slack: codebazaar:dfUey8QKvSJBHhdpNaFBSjMH
