--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,7 @@ matrix:
 
 before_script:
   - export PATH=$HOME/.cargo/bin:$PATH
-  - rustup component add rustfmt-preview
-  - rustup component add clippy-preview
   - cargo install cargo-update || echo "cargo-update already installed"
-  - cargo install cargo-travis || echo "cargo-travis already installed"
   - cargo install-update -a # update outdated cached binaries  
 script:
   - cargo test
@@ -38,14 +35,14 @@ script:
 jobs:
   include:
     - stage: checks
+      before_script:
+      - rustup component add rustfmt-preview
+      - rustup component add clippy-preview
+      - cargo install cargo-travis || echo "cargo-travis already installed"        
       script:
       - cargo fmt -- --check
       - cargo clippy -- -D warnings
+      after_success:
+      - cargo coveralls  
       rust: stable        
-
-
-
-after_success:
-# measure code coverage and upload to coveralls.io
-  - cargo coveralls  
 
